# ml-sytem

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .replit  AGENTS.md  CHANGELOG.md  CLEANUP_AUDIT_REPORT.md  CLEANUP_SUMMARY.md  Dockerfile.api  Dockerfile.frontend  GEMINI.md  HARDWARE.md  MEMORY.md  MYPY_FIXES_COMPLETE.md  Makefile  Makefile.backup  PROJECT_ENHANCEMENTS_COMPLETE.md  README.md  REPO_EVALUATION.md  RUFF_MYPY_FIXES_COMPLETE.md  UPGRADE_REPORT.md  UPGRADE_REPORT_V2.md  UPGRADE_SUMMARY_v0.5.0.md  ai_factory_8b_calculus_pipeline.md  alembic.ini  bandit-report-final.json  bandit-report.json  cli.py  context.md  convert_training_config.py  docker-compose.yml  explanation.md  fix_automl.py  fix_inference.py  fix_monitoring.py  fix_page.py  fix_react_hooks.py  generate_advanced_graphs.py  (+20 more)
.github/workflows/: ci.yml
ai_factory/: __init__.py  artifacts.py  cli.py  cli_scripts.py  config.py  database.py  dependencies.py  main.py  schemas.py  simulation.py  titan.py  tui.py  version.py
ai_factory/alembic/: env.py
ai_factory/api/: websocket.py
ai_factory/core/: __init__.py  answers.py  artifacts.py  async_utils.py  datasets.py  discovery.py  error_taxonomy.py  exceptions.py  foundation.py  hashing.py  io.py  model_scales.py  reports.py  schemas.py  state.py  tokens.py  workflows.py
ai_factory_titan/: Cargo.toml  README.md  build.rs
ai_factory_titan/benches/: kernel_throughput.rs  kernels.rs
ai_factory_titan/src/: async_runtime.rs  backend.rs  cpp.rs  cpu_kernels.rs  cuda_kernels.rs  cuda_kernels_v3.bak  detect.rs  distributed.rs  distributed_v5.rs  engine.rs  gguf.rs  kv_cache.rs  lib.rs  memory.rs  metal_kernels.rs  profiling.rs  python.rs  quantization.rs  runtime.rs  sampler.rs  scheduler.rs  telemetry.rs  tensor.rs
ai_factory_titan/src/cpp/: kernels.cpp  kernels_v3.cpp
ai_factory_titan/src/cuda/: kernels.cu  kernels_v5.cu
ai_factory_titan/src/metal/: shaders.metal  shaders_v3.metal
ai_factory_titan/tests/: engine_runtime.rs
atlas_math_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
attached_assets/: Pasted--AI-Factory-Replit-Backend-Master-Prompt-Mission-You-ar_1774999789955.txt
configs/: deepspeed_h100.json  deploy.yaml  domain_example.yaml  eval.yaml  finetune.yaml  inference.yaml  multi_domain_example.yaml  prepare.yaml  report.yaml  train.yaml
data/: README.md  catalog.json  catalog.py  mine_failure_cases.py  prepare_dataset.py
desktop/: README.md  main.js  package-lock.json  package.json  preload.js
docs/: ARCHITECTURE_UPDATES.md  api-guide.md  architecture-updates.md  architecture.md  benchmark-guide.md  contributor-guide.md  control-center.md  data-system.md  deployment-guide.md  evaluation-system.md  experiment-playbook.md  experiments.md  foundation-layer.md  inference-system.md  model-card.md  notebook-guide.md  optimization-guide.md  reproducibility.md  roadmap.md  runbook.md  training-system.md  troubleshooting.md  v1-operational-contract.md
docs/api/: README.md  (+1 more)
evaluation/: README.md  benchmark_registry.py  error_taxonomy.py  eval_suite_v2.py  evaluate.py  final_eval_optimize.py  generated_benchmark.py  metrics.py  reporting.py  run_generated_eval.py
fixes/: GITHUB_FIXES_COMPLETE.md  MYPY_FIXES_COMPLETE.md  README.md
frontend/: README.md  REDESIGN_PROMPT.md  TECHNICAL_SPEC.md  eslint.config.mjs  next.config.mjs  next.config.optimized.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
graph_generation/: __init__.py  cli.py  loader.py
inference/: Dockerfile  README.md
notebooks/: 00_dataset_landscape.ipynb  01_calculus_generator_lab.ipynb  02_transformer_exploration.ipynb  03_base_vs_finetuned_inference.ipynb  04_evaluation_win_case_browser.ipynb  05_lora_experiment_board.ipynb  06_public_dataset_normalization.ipynb  07_dataset_quality_audit.ipynb  08_prompt_optimization_lab.ipynb  09_reranking_self_consistency.ipynb  10_verifier_analysis.ipynb  11_benchmark_slice_analysis.ipynb  12_error_driven_retraining.ipynb  13_run_artifact_explorer.ipynb  14_colab_training_pipeline.ipynb  README.md  build_notebooks.py
prompts/: README.md  aifactory-titan.md  backend-platform-upgrade.md  codex_accuracy_training.md  docs-evals-datasets-upgrade.md  engine-training-upgrade.md  orchestration-agents-upgrade.md  shared-repo-context.md  web-dashboard-upgrade.md
reports/: audit-final.md  audit1.md  audit2.md  audit3.md
scripts/: api_smoke.py  cleanup_training_cache.py  combine_datasets.py  common.py  doctor.py  ensemble_inference.py  export_openapi.py  generate_visualizations.py  latest_run.py  metrics.py  post-merge.sh  quality_gate.sh  refresh_lab.py  start-linux.sh  start-mac.sh
src/: App.tsx  index.css
tests/: conftest.py  test_api_performance.py  test_architecture_boundaries.py  test_async_utils.py  test_autonomous_routes.py  test_cache_manager.py  test_cli_api_contracts.py  test_cli_scripts_security.py  test_control_plane_runtime.py  test_control_service.py  test_core_answers.py  test_core_async_utils.py  test_core_cache.py  test_core_discovery.py  test_core_security.py  test_core_utils.py  test_data_processing.py  test_desktop_interface.py  test_distributed_components.py  test_distributed_orchestration.py  test_distributed_orchestrator.py  test_evaluation_analysis.py  test_evaluation_benchmark_registry.py  test_evaluation_metrics.py  test_evaluation_reporting.py  test_evaluation_runtime.py  test_inference_api.py  test_instance_creation.py  test_instance_creation_service.py  test_instance_manager.py  test_instances_creation.py  test_lab_routes.py  test_lightweight_imports.py  test_mission_control_api.py  test_model_catalog.py  test_monitoring_collectors.py  test_openai_inference_api.py  test_orchestration_agents.py  test_orchestration_api.py  test_orchestration_distributed.py  (+18 more)
training/: Dockerfile  README.md  ULTIMATE_UPGRADE_SUMMARY.md  calculus_8b_first_run.pt  calculus_tokenizer.json  codex_accuracy_final.md  launch_enhanced_training.py  launch_ultimate_training.py  train.py  train_calculus_8b.py
vision/: cleanup_summary.md  goal.md  scale.md
(+937 files in other folders)
