[project]
name = "ai-factory"
version = "0.3.0"
description = "Unified AI operating system for managing the complete LLM lifecycle from training to deployment."
requires-python = ">=3.11"
dependencies = [
  "accelerate>=1.6.0",
  "datasets>=3.5.0",
  "fastapi>=0.115.12",
  "httpx>=0.28.1",
  "numpy>=2.2.0",
  "orjson>=3.10.16",
  "pandas>=2.2.3",
  "peft>=0.15.0",
  "pydantic>=2.11.1",
  "python-multipart>=0.0.20",
  "pyyaml>=6.0.2",
  "rich>=14.0.0",
  "sympy>=1.13.3",
  "tokenizers>=0.21.1",
  "torch>=2.6.0",
  "transformers>=4.51.0",
  "trl>=0.15.0",
  "tqdm>=4.67.1",
  "uvicorn[standard]>=0.34.2",
  "uvloop>=0.21.0; sys_platform != 'win32'",
  "h11>=0.14.0",
]

[project.optional-dependencies]
train-cuda = [
  "bitsandbytes>=0.45.5",
  "flash-attn>=2.7.3; platform_system == 'Linux'",
]
macos = [
  "mlx>=0.28.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "mlx-lm>=0.20.6; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "sentencepiece>=0.2.0",
]
dev = [
  "pre-commit>=4.2.0",
  "mypy>=1.15.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
  "pytest-cov>=6.1.0",
  "pytest-xdist>=3.6.1",
  "ruff>=0.11.2",
  "types-PyYAML>=6.0.12",
  "types-requests>=2.32.0",
  "bandit>=1.8.3",
  "safety>=3.3.0",
  "httpx>=0.28.1",         # async test client for FastAPI
]

[project.scripts]
ai-factory = "ai_factory.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ai_factory*", "inference*"]
exclude = ["tests", "tests.*"]

[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4"]
extend-ignore = [
  "E501",   # line length handled by formatter
  "B008",   # FastAPI Depends() pattern
  "SIM108", # ternary expressions in complex contexts
]

[tool.ruff.lint.per-file-ignores]
"inference/app/routers/*.py" = ["B008"]
"tests/**/*.py" = ["S101", "ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_no_return = false
disallow_untyped_defs = true
exclude = ["^tests/"]

[[tool.mypy.overrides]]
module = [
    "inference.*",
    "ai_factory.interfaces.*",
    "ai_factory.cli",
    "tests.*"
]
ignore_errors = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["ai_factory", "inference"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "\\.\\.\\.",
]
