[package]
name = "ai_factory_titan"
version = "0.5.0"
edition = "2021"
rust-version = "1.82"
description = "Titan compute core v0.5 for AI-Factory — Metal, CUDA, and CPU fallback with paged KV cache, priority scheduler, mixed-precision kernels, distributed training primitives, and next-gen hardware support (Blackwell, M5 Ultra)."
authors = ["AI-Factory Team"]
license = "MIT"
repository = "https://github.com/super244/ai-factory"
keywords = ["llm", "inference", "gpu", "cuda", "metal", "distributed", "blackwell", "m5-ultra"]
categories = ["science", "hardware-support"]

[lib]
name = "ai_factory_titan"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "titan-status"
path = "src/bin/titan-status.rs"

[features]
default = ["async-runtime"]
metal   = ["dep:metal", "dep:objc", "dep:objc_id", "metal-cpp"]
cuda    = ["dep:cudarc", "dep:half", "cudarc/cuda-12080", "cudarc/f16", "cuda-graphs", "cuda-secure"]
cuda-graphs = []  # CUDA Graphs for static workload optimization
cuda-secure = []  # Secure CUDA execution with memory encryption
metal-cpp   = []  # Metal C++ bridge support
python  = ["dep:pyo3", "dep:numpy"]
cpp     = []
async-runtime = ["tokio/rt-multi-thread", "tokio/time", "tokio/sync", "tokio/parking_lot"]
distributed = ["rdma", "nccl-compat"]  # Multi-node training support
rdma = []  # RDMA for InfiniBand
nccl-compat = []  # NCCL-compatible collective operations
ultimate = ["metal", "cuda", "cpp", "async-runtime", "distributed", "cuda-secure"]
supercharged = ["ultimate", "cuda-graphs", "nccl-compat"]  # Everything enabled

[dependencies]
# Core
anyhow            = "1.0.95"
thiserror         = "2.0"
serde             = { version = "1.0.217", features = ["derive"] }
serde_json        = "1.0.138"
bytemuck          = { version = "1.21", features = ["derive"] }

# Async runtime
tokio             = { version = "1.43", features = ["macros", "rt-multi-thread", "sync", "time", "parking_lot"] }
futures           = "0.3.31"
async-trait       = "0.1.85"

# Parallelism
rayon             = "1.10"
parking_lot       = "0.12"
dashmap           = "6.1"
crossbeam-channel = "0.5.14"
crossbeam-queue   = "0.3.12"

# GPU - CUDA
cudarc            = { version = "0.13", features = ["f16"], optional = true }
half              = { version = "2.4", features = ["std", "num-traits", "rand_distr", "serde"], optional = true }

# GPU - Metal
metal             = { version = "0.32", optional = true }
objc              = { version = "0.2", optional = true }
objc_id           = { version = "0.1", optional = true }

# Python bindings
pyo3              = { version = "0.24", features = ["extension-module", "abi3-py39", "multiple-pymethods"], optional = true }
numpy             = { version = "0.24", optional = true }

# Data & Arrow
arrow-array       = "55"
arrow-buffer      = "55"
arrow-schema      = "55"
arrow-ipc         = "55"
parquet           = { version = "55", features = ["arrow", "async"] }

# Utilities
log               = "0.4.25"
tracing           = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
instant           = "0.1.13"
sys-info          = "0.9"
num-traits        = "0.2.19"
rand              = "0.8.5"
rand_distr        = "0.4.3"
chrono            = { version = "0.4.39", features = ["serde"] }

# Memory management
memmap2           = "0.9.5"
bytes             = "1.10"

# Serialization
bincode           = "1.3.3"

[dev-dependencies]
tempfile          = "3.15"
approx            = "0.5.1"
criterion         = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio-test        = "0.4.4"
proptest          = "1.6"

[build-dependencies]
cc = "1.1"
bindgen = "0.70"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"

[profile.release-fast]
inherits  = "release"
opt-level = 3
lto       = "thin"
debug     = true

[profile.release-size]
inherits  = "release"
opt-level = "s"
lto       = "fat"

[profile.bench]
opt-level     = 3
lto           = "thin"
codegen-units = 4

[profile.dev]
opt-level     = 1

[[bench]]
name = "kernels"
harness = false

